--- a/app/components/tabs_component.html.erb
+++ b/app/components/tabs_component.html.erb
@@ -11,7 +11,7 @@
             <% end %>
             <%= tab[:label] %>
             <% if tab[:badge_count] && tab[:badge_count] > 0 %>
-              <span class="du-badge du-badge-sm du-badge-warning"><%= tab[:badge_count] %></span>
+              <span class="badge badge-sm badge-warning"><%= tab[:badge_count] %></span>
             <% end %>
           <% end %>
         <% end %>
