--- a/app/views/organizations/invitations/index.html.erb
+++ b/app/views/organizations/invitations/index.html.erb
@@ -26,7 +26,7 @@
             </td>
             <td>
               <div class="flex items-center gap-2 justify-end">
-                <%= button_to t(".cancel_invitation"), organization_invitation_path(invitation.organization, invitation), method: :delete, class: "du-btn du-btn-sm du-btn-error" %>
+                <%= button_to t(".cancel_invitation"), organization_invitation_path(invitation.organization, invitation), method: :delete, class: "btn btn-sm btn-error" %>
               </div>
             </td>
           </tr>
