--- a/app/views/organizations/invitations/new.html.erb
+++ b/app/views/organizations/invitations/new.html.erb
@@ -9,7 +9,7 @@
         <%= form.label :email %>
         <%= form.email_field :email,
                             placeholder: "hello@superails.com",
-                            class: "du-input w-full",
+                            class: "input w-full",
                             autocomplete: "off",
                             autocorrect: "off",
                             autocapitalize: "off",
@@ -19,7 +19,7 @@
       </div>
 
       <div class="flex justify-end">
-        <%= form.submit "Invite", class: "du-btn du-btn-primary" %>
+        <%= form.submit "Invite", class: "btn btn-primary" %>
       </div>
     <% end %>
   <% end %>
