--- a/app/views/organizations/memberships/edit.html.erb
+++ b/app/views/organizations/memberships/edit.html.erb
@@ -18,7 +18,7 @@
       </div>
 
       <div class="flex justify-end">
-        <%= form.submit class: "du-btn du-btn-primary" %>
+        <%= form.submit class: "btn btn-primary" %>
       </div>
     <% end %>
   <% end %>
