--- a/app/views/organizations/subscriptions/_pricing.html.erb
+++ b/app/views/organizations/subscriptions/_pricing.html.erb
@@ -25,16 +25,16 @@
 						<% if user_signed_in? && @organization.present? %>
 							<% if @organization.payment_processor.subscribed? %>
 								<% if plan_for(@organization.payment_processor.subscription)[:interval] == plan[:interval].to_s %>
-									<%= button_tag t(".current_plan"), class: "du-btn du-btn-secondary", disabled: true %>
+									<%= button_tag t(".current_plan"), class: "btn btn-secondary", disabled: true %>
 								<% else %>
-									<%= button_to t("organizations.subscriptions.plan.manage_billing"), organization_subscriptions_billing_portal_path(Current.organization), data: { turbo: false }, class: "du-btn du-btn-secondary" %>
+									<%= button_to t("organizations.subscriptions.plan.manage_billing"), organization_subscriptions_billing_portal_path(Current.organization), data: { turbo: false }, class: "btn btn-secondary" %>
 								<% end %>
 
 							<% else %>
-								<%= link_to t(".subscribe"), organization_subscriptions_checkout_path(Current.organization, price_id: plan[:id]), data: { turbo: false }, class: "du-btn du-btn-primary" %>
+								<%= link_to t(".subscribe"), organization_subscriptions_checkout_path(Current.organization, price_id: plan[:id]), data: { turbo: false }, class: "btn btn-primary" %>
 							<% end %>
 						<% else %>
-							<%= link_to t(".subscribe"), new_user_registration_path, class: "du-btn du-btn-primary" %>
+							<%= link_to t(".subscribe"), new_user_registration_path, class: "btn btn-primary" %>
 						<% end %>
 					</div>
 				</div>
