--- a/app/views/users/connected_accounts/_connected_account.html.erb
+++ b/app/views/users/connected_accounts/_connected_account.html.erb
@@ -33,6 +33,6 @@
     <%= button_to t(".disconnect_button"), user_connected_account_path(connected_account),
         method: :delete,
         data: { turbo_confirm: t(".confirm_disconnect_message") },
-        class: "du-btn du-btn-sm du-btn-error du-btn-outline" %>
+        class: "btn btn-sm btn-error btn-outline" %>
   </td>
 </tr>
