--- a/app/views/users/connected_accounts/index.html.erb
+++ b/app/views/users/connected_accounts/index.html.erb
@@ -17,7 +17,7 @@
                     <%= ConnectedAccount::PROVIDER_CONFIG[provider.to_sym][:name] %>
                   </div>
                 </div>
-                <%= button_tag t(".connect_button"), class: "du-btn du-btn-sm du-btn-primary" %>
+                <%= button_tag t(".connect_button"), class: "btn btn-sm btn-primary" %>
               </div>
             <% end %>
           </div>
