--- a/app/assets/tailwind/components/pagy.css
+++ b/app/assets/tailwind/components/pagy.css
@@ -1,22 +1,22 @@
 .pagy {
   @apply flex space-x-1 font-medium text-sm;
   a:not(.gap) {
-    @apply du-btn du-btn-sm du-btn-outline;
+    @apply btn btn-sm btn-outline;
     &:hover {
-      @apply du-btn-active;
+      @apply btn-active;
     }
     &:not([href]) {
       /* disabled links */
-      @apply du-btn opacity-50 cursor-not-allowed du-btn-sm;
+      @apply btn opacity-50 cursor-not-allowed btn-sm;
     }
     &.current {
-      @apply du-btn du-btn-sm du-btn-primary;
+      @apply btn btn-sm btn-primary;
     }
   }
   label {
     @apply flex flex-col w-full;
     input {
-      @apply du-input border border-base-300 rounded-md du-input-sm w-16;
+      @apply input border border-base-300 rounded-md input-sm w-16;
     }
   }
 }
