--- a/app/views/devise/invitations/new.html.erb
+++ b/app/views/devise/invitations/new.html.erb
@@ -5,12 +5,12 @@
     <% resource.class.invite_key_fields.each do |field| %>
       <div class="space-y-1">
         <%= f.label field, class: "block text-sm font-medium" %>
-        <%= f.text_field field, class: "du-input w-full", autofocus: true %>
+        <%= f.text_field field, class: "input w-full", autofocus: true %>
       </div>
     <% end %>
 
     <div class="pt-2">
-      <%= f.submit t("devise.invitations.new.submit_button"), class: "du-btn du-btn-primary du-btn-block" %>
+      <%= f.submit t("devise.invitations.new.submit_button"), class: "btn btn-primary btn-block" %>
     </div>
   <% end %>
 <% end %>
