--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -9,16 +9,16 @@
       <% if @minimum_password_length %>
         <p class="text-xs"><%= t("devise.views.passwords.edit.password_minimum", count: @minimum_password_length) %></p>
       <% end %>
-      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "du-input w-full", placeholder: t("devise.views.passwords.edit.password_placeholder") %>
+      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "input w-full", placeholder: t("devise.views.passwords.edit.password_placeholder") %>
     </div>
 
     <div class="space-y-1">
       <%= f.label :password_confirmation, t("devise.views.passwords.edit.password_confirmation_label"), class: "block text-sm font-medium" %>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "du-input w-full", placeholder: t("devise.views.passwords.edit.password_confirmation_placeholder") %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input w-full", placeholder: t("devise.views.passwords.edit.password_confirmation_placeholder") %>
     </div>
 
     <div class="pt-2">
-      <%= f.submit t("devise.views.passwords.edit.submit"), class: "du-btn du-btn-primary du-btn-block" %>
+      <%= f.submit t("devise.views.passwords.edit.submit"), class: "btn btn-primary btn-block" %>
     </div>
   <% end %>
 
