--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
 
         <div class="space-y-1">
           <%= f.label :email, t("devise.views.registrations.new.email_label"), class: "block text-sm font-medium" %>
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "du-input w-full", placeholder: t("devise.views.registrations.new.email_placeholder") %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input w-full", placeholder: t("devise.views.registrations.new.email_placeholder") %>
         </div>
 
         <div class="space-y-1">
@@ -17,17 +17,17 @@
           <% if @minimum_password_length %>
             <p class="text-xs"><%= t("devise.views.registrations.new.password_minimum", count: @minimum_password_length) %></p>
           <% end %>
-          <%= f.password_field :password, autocomplete: "new-password", class: "du-input w-full", placeholder: t("devise.views.registrations.new.password_placeholder") %>
+          <%= f.password_field :password, autocomplete: "new-password", class: "input w-full", placeholder: t("devise.views.registrations.new.password_placeholder") %>
         </div>
 
         <div class="pt-2">
-          <%= f.submit t("devise.views.registrations.new.submit"), class: "du-btn du-btn-primary du-btn-block" %>
+          <%= f.submit t("devise.views.registrations.new.submit"), class: "btn btn-primary btn-block" %>
         </div>
       <% end %>
 
       <%= render "devise/shared/links" %>
     <% else %>
-      <%= link_to t("devise.views.sessions.new.sign_in_with_email"), new_user_registration_path(via_email: true), class: "du-btn du-btn-primary du-btn-block" %>
+      <%= link_to t("devise.views.sessions.new.sign_in_with_email"), new_user_registration_path(via_email: true), class: "btn btn-primary btn-block" %>
     <% end %>
   <% end %>
 <% end %>
