--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -6,10 +6,10 @@
 
 
 <%= render PageComponent.new(full_width: false) do %>
-  <div class="du-divider"></div>
+  <div class="divider"></div>
 
   <div class="flex items-center gap-2">
-    <%= link_to t("organizations.transfers.show.title"), organization_transfer_path(@organization), data: { turbo_frame: :modal }, class: "du-btn du-btn-error du-btn-outline" if @organization.can_transfer?(current_user) %>
-    <%= link_to t("shared.actions.destroy"), @organization, data: { turbo_method: :delete, turbo_confirm: t("shared.actions.confirm") }, class: "du-btn du-btn-error du-btn-outline" if policy(@organization).destroy? %>
+    <%= link_to t("organizations.transfers.show.title"), organization_transfer_path(@organization), data: { turbo_frame: :modal }, class: "btn btn-error btn-outline" if @organization.can_transfer?(current_user) %>
+    <%= link_to t("shared.actions.destroy"), @organization, data: { turbo_method: :delete, turbo_confirm: t("shared.actions.confirm") }, class: "btn btn-error btn-outline" if policy(@organization).destroy? %>
   </div>
 <% end %>
