--- a/app/views/organizations/projects/_form.html.erb
+++ b/app/views/organizations/projects/_form.html.erb
@@ -7,6 +7,6 @@
   </div>
 
   <div class="flex justify-end">
-    <%= form.submit class: "du-btn du-btn-primary" %>
+    <%= form.submit class: "btn btn-primary" %>
   </div>
 <% end %>
