--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="du-footer lg:du-footer-horizontal p-4 text-center border-t border-base-content/20 bg-base-300 space-y-2">
+<footer class="footer lg:footer-horizontal p-4 text-center border-t border-base-content/20 bg-base-300 space-y-2">
   <aside>
     <div>
       <%= link_to root_path, class: "no-underline" do %>
@@ -12,12 +12,12 @@
   </aside>
 
   <nav>
-    <%= active_link_to t("static.index.title"), root_path, class_active: "du-link-active", class: "du-link du-link-hover" %>
-    <%= active_link_to t("static.pricing.title"), pricing_path, class_active: "du-link-active", class: "du-link du-link-hover" %>
+    <%= active_link_to t("static.index.title"), root_path, class_active: "link-active", class: "link link-hover" %>
+    <%= active_link_to t("static.pricing.title"), pricing_path, class_active: "link-active", class: "link link-hover" %>
   </nav>
   <nav>
-    <%= active_link_to t("static.terms.title"), terms_path, data: { turbo_frame: :modal }, class_active: "du-link-active", class: "du-link du-link-hover" %>
-    <%= active_link_to t("static.privacy.title"), privacy_path, data: { turbo_frame: :modal }, class_active: "du-link-active", class: "du-link du-link-hover" %>
-    <%= active_link_to t("static.refunds.title"), refunds_path, data: { turbo_frame: :modal }, class_active: "du-link-active", class: "du-link du-link-hover" %>
+    <%= active_link_to t("static.terms.title"), terms_path, data: { turbo_frame: :modal }, class_active: "link-active", class: "link link-hover" %>
+    <%= active_link_to t("static.privacy.title"), privacy_path, data: { turbo_frame: :modal }, class_active: "link-active", class: "link link-hover" %>
+    <%= active_link_to t("static.refunds.title"), refunds_path, data: { turbo_frame: :modal }, class_active: "link-active", class: "link link-hover" %>
   </nav>
 </footer>
