--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
     <%# if Flipper.enabled?(:search, current_user) %>
     <%# if Flipper[:search].enabled?(current_user) %>
     <%# if Flipper[:search].enabled? %>
-    <%= active_link_to search_path, data: { turbo_frame: :modal, controller: "click", action: "keydown.meta+k@window->click#click keydown.ctrl+k@window->click#click" }, class: "max-lg:hidden du-input du-input-sm gap-2 cursor-pointer lg:min-w-64 rounded-lg" do %>
+    <%= active_link_to search_path, data: { turbo_frame: :modal, controller: "click", action: "keydown.meta+k@window->click#click keydown.ctrl+k@window->click#click" }, class: "max-lg:hidden input input-sm gap-2 cursor-pointer lg:min-w-64 rounded-lg" do %>
       <%= inline_svg_tag "svg/magnifying-glass.svg", class: "size-4 w-4 h-4" %>
       <span class="grow hidden lg:block"><%= t("search.index.title") %></span>
       <kbd class="kbd kbd-sm hidden lg:inline-flex">⌘</kbd>
@@ -30,7 +30,7 @@
   <%# right %>
   <div class="flex items-center gap-4">
     <% if user_masquerade? %>
-      <%= link_to t("devise.masquerade.back"), back_masquerade_path(current_user), class: "du-btn du-btn-warning du-btn-sm uppercase" %>
+      <%= link_to t("devise.masquerade.back"), back_masquerade_path(current_user), class: "btn btn-warning btn-sm uppercase" %>
     <% end %>
 
     <% if current_user.admin? %>
@@ -41,7 +41,7 @@
         </summary>
         <div class="absolute right-0 mt-5 bg-base-200 border border-base-content/20 z-1 rounded-lg p-1 space-y-1">
           <% admin_link_options.each do |link| %>
-            <%= active_link_to link[:path], class_active: "du-btn-active", class: "whitespace-nowrap du-btn du-btn-ghost justify-start w-full" do %>
+            <%= active_link_to link[:path], class_active: "btn-active", class: "whitespace-nowrap btn btn-ghost justify-start w-full" do %>
               <%= link[:icon] %>
               <%= link[:name] %>
             <% end %>
@@ -57,7 +57,7 @@
         <%= user_avatar(current_user) %>
         <%= inline_svg_tag "svg/chevron-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200 group-open:rotate-180" %>
       </summary>
-      <div class="absolute right-0 mt-5 bg-base-200 border border-base-content/20 z-1 rounded-lg p-1 space-y-1 du-menu">
+      <div class="absolute right-0 mt-5 bg-base-200 border border-base-content/20 z-1 rounded-lg p-1 space-y-1 menu">
         <%= render "shared/user_links" %>
       </div>
     </details>
