--- a/lib/templates/erb/scaffold/edit.html.erb.tt
+++ b/lib/templates/erb/scaffold/edit.html.erb.tt
@@ -3,6 +3,6 @@
 <%%= modal do %>
   <%%= render PageComponent.new(title: "Editing <%= human_name.downcase %>") do |component| %>
     <%%= render "form", <%= singular_table_name %>: @<%= singular_table_name %> %>
-    <%%= link_to "Cancel", <%= model_resource_name(prefix: "@") %>, class: "du-btn du-btn-secondary" %>
+    <%%= link_to "Cancel", <%= model_resource_name(prefix: "@") %>, class: "btn btn-secondary" %>
   <%% end %>
 <%% end %>
