--- a/app/views/organizations/_membership_actions.html.erb
+++ b/app/views/organizations/_membership_actions.html.erb
@@ -7,6 +7,6 @@
     <%= button_to t("public.organizations.show.actions.accept_invitation"), approve_user_invitation_path(organization.user_invitations.pending.find_by(user: current_user)), method: :post, class: "btn btn-sm btn-primary" %>
     <%= button_to t("public.organizations.show.actions.reject_invitation"), reject_user_invitation_path(organization.user_invitations.pending.find_by(user: current_user)), method: :post, class: "btn btn-sm btn-error" %>
   <% else %>
-    <%= button_to t("public.organizations.show.actions.#{organization.privacy_setting_public? ? "join" : "request_to_join"}"), user_membership_requests_path(organization_id: organization.id), method: :post, class: "btn btn-sm btn-primary" %>
+    <%= button_to t("public.organizations.show.actions.#{organization.privacy_setting_public? ? 'join' : 'request_to_join'}"), user_membership_requests_path(organization_id: organization.id), method: :post, class: "btn btn-sm btn-primary" %>
   <% end %>
 </div>
