--- a/app/views/static/privacy.html.erb
+++ b/app/views/static/privacy.html.erb
@@ -2,6 +2,6 @@
 
 <%= modal do %>
   <%= render PageComponent.new(full_width: false) do |component| %>
-    <%= markdown_to_html(File.read(Rails.root.join("app/views/static/privacy.md"))) %>
+    <%= markdown_to_html(Rails.root.join("app/views/static/privacy.md").read) %>
   <% end %>
 <% end %>
