simplify layout style

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="flex justify-between px-4 lg:pl-0 py-2 bg-base-300">
+<nav class="flex justify-between p-4 lg:border-b border-base-content/20">
   <%# left %>
   <div class="flex items-center gap-4">
     <button data-action="click->mobile-sidebar#open" class="lg:hidden cursor-pointer inline-flex items-center gap-2">
