do not crop main page content with footer

--- a/app/views/shared/_footer_nav.html.erb
+++ b/app/views/shared/_footer_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="dock dock-lg lg:hidden border-t border-base-content/20">
+<nav class="dock dock-lg sticky bottom-0 lg:hidden border-t border-base-content/20">
   <% if Current.organization %>
     <%= active_link_to organization_dashboard_path(Current.organization), class_active: "dock-active", class: "" do %>
       <%= inline_svg_tag "svg/home.svg", class: "size-[1.2em]" %>
