--- a/app/views/users/notifications/_bell.html.erb
+++ b/app/views/users/notifications/_bell.html.erb
@@ -1,5 +1,5 @@
-<%= active_link_to user_notifications_path, class: "relative max-lg:hidden" do %>
+<%= active_link_to user_notifications_path, class: "relative max-lg:hidden btn btn-ghost btn-circle" do %>
   <%= inline_svg_tag "svg/bell.svg", class: "size-6" %>
   <%= render "users/notifications/notifications_count", unread: user.unseen_notifications_count %>
-  <%= turbo_stream_from "notifications_index_#{current_user.id}" %>
 <% end %>
+<%= turbo_stream_from "notifications_index_#{current_user.id}" %>
