--- a/app/components/page_component.html.erb
+++ b/app/components/page_component.html.erb
@@ -6,12 +6,12 @@
           <%= title_content %>
         </div>
       <% elsif title.present? %>
-        <h1 class="font-medium text-2xl @3xl:text-3xl min-w-0">
+        <h1 class="font-semibold text-2xl @3xl:text-3xl min-w-0">
           <%= title %>
         </h1>
       <% end %>
       <% if action_list.present? %>
-        <div class="whitespace-nowrap">
+        <div class="whitespace-nowrap flex items-center gap-1">
           <%= action_list %>
         </div>
       <% end %>
