--- a/app/views/organizations/projects/index.html.erb
+++ b/app/views/organizations/projects/index.html.erb
@@ -1,6 +1,20 @@
 <% content_for :title, "Projects" %>
 
-<%= render PageComponent.new(title: "Projects") do |component| %>
+<% breadcrumbs = capture do %>
+  <nav aria-label="Breadcrumb">
+    <div class="breadcrumbs text-lg">
+      <ul>
+        <li>
+          <%= link_to organization_projects_path(@organization) do %>
+            <span>Projects</span>
+          <% end %>
+        </li>
+      </ul>
+    </div>
+  </nav>
+<% end %>
+
+<%= render PageComponent.new(title: breadcrumbs) do |component| %>
   <% component.with_action_list do %>
     <%= link_to t("shared.actions.new"), new_organization_project_path(@organization), data: { turbo_frame: :modal }, class: "btn btn-primary" %>
   <% end %>
@@ -15,9 +29,9 @@
           <th></th>
         </tr>
       </thead>
-      <tbody id="projects">
+      <tbody id="projects" data-controller="clickable-row">
         <% @projects.each do |project| %>
-          <tr>
+          <tr class="cursor-pointer" data-clickable-row-target="row" data-url="<%= organization_project_path(@organization, project) %>">
             <td data-label="<%= Project.human_attribute_name(:name) %>"><%= project.name %></td>
             <td data-label="<%= Project.human_attribute_name(:created_at) %>"><%= local_time(project.created_at, format: :short) %></td>
             <td data-label="<%= Project.human_attribute_name(:updated_at) %>"><%= local_time(project.updated_at, format: :short) %></td>
